fixup! refactor cleanup
Signed-off-by: Andrew Azores <aazores@redhat.com>